# pysvg

./: pyproject.toml
pysvg/: __init__.py
pysvg/attributes/: __init__.py  base.py  core.py  presentation.py  styling.py
pysvg/elements/: __init__.py  circle.py  core.py  g.py  path.py  rect.py  svg.py  text.py
pysvg/types/: __init__.py  base.py  color.py  length.py  length_percentage.py  named_color.py  percentage.py  transform.py
